fixed map description spacing between description and likes

--- a/src/frontend/sass/park-list-panel.scss
+++ b/src/frontend/sass/park-list-panel.scss
@@ -20,6 +20,9 @@
 .mapMarkerDescription {
   display: flex;
   justify-content: space-between;
+  main{
+    margin-right: 3em;
+  }
 }
 .parkListPanelBody {
   display: flex;
